--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,6 @@
   ],
   "routes": [
     { "src": "/(.*)", "dest": "manage.py" }
-  ]
+  ],
+  "buildCommand": "pip install setuptools==65.5.0 && pip install -r requirements.txt"
 }
