--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,5 @@
   "routes": [
     { "src": "/(.*)", "dest": "manage.py" }
   ],
-  "buildCommand": "pip install setuptools==65.5.0 && pip install -r requirements.txt"
+  "buildCommand": "pip install --upgrade pip setuptools==65.5.0 && pip install -r requirements.txt"
 }
